--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -40,3 +40,14 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+     
+  git-mirror:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: wearerequired/git-mirror-action@v1
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        with:
+          source-repo: 'git@github.com:fliu2476/gh-hosts.git'
+          destination-repo: 'git@gitee.com:fliu2476/github-hosts.git'
